Update value of z-index to fix v2ex 超级增强 issue

--- a/src/content.scss
+++ b/src/content.scss
@@ -86,7 +86,7 @@
   background-position: 3px 3px;
   transition: all 0s 0.1s;
   /* Fix v2ex 超级增强 start */
-  z-index: 100;
+  z-index: 90;
   /* Fix v2ex 超级增强 end */
 }
 
